packageのための情報を追加

--- a/CsMigemo/CsMigemo.csproj
+++ b/CsMigemo/CsMigemo.csproj
@@ -3,6 +3,10 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Authors>oguna</Authors>
+    <Version>0.0.1</Version>
+    <PackageProjectUrl>https://github.com/oguna/csmigemo</PackageProjectUrl>
+    <PackageLicenseExpression>GPL-3.0-only</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
